testsuite/tests/rename/should_fail/T5372.stderr

T5372.hs:4:11: error:
    Not in scope: data constructor ‘MkS’
    Perhaps you meant ‘T5372a.MkS’ (imported from T5372a)

T5372.hs:4:17: error:
    Not in scope: ‘x’
    Perhaps you meant ‘T5372a.x’ (imported from T5372a)
